Updates to accommodate REGENIE & SNPTEST 2.5.6.

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -12,7 +12,10 @@ SOFTWARE="/hpc/local/Rocky8/dhl_ec/software"
 GWASTOOLKITDIR="/hpc/dhl_ec/tpeters/git_repos/GWASToolKit"
 
 ### REQUIRED: Path_to support programs on the server
+# SNPTEST version 2.5.4
 SNPTEST="${SOFTWARE}/snptest_v2.5.4"
+# SNPTEST version 2.5.6
+SNPTEST="${SOFTWARE}/snptest_v2.5.6"
 PLINK2="${SOFTWARE}/plink2"
 LOCUSZOOM13="${SOFTWARE}/locuszoom_1.3/bin/locuszoom"
 
@@ -64,24 +67,53 @@ QTIMEGENECLEANER="01:00:00" # 1hours to clean
 ### 'FAIL' Mail is sent when the job fails.
 ### 'REQUEUE' Mail is sent when the job is re-queued;
 ### 'ALL' Mail sent for all the above.
-YOUREMAIL="t.s.peters-4@umcutrecht.nl"
+YOUREMAIL="s.w.vanderlaan-2@umcutrecht.nl"
 MAILSETTINGS="FAIL"
-
 
 ### ANALYSIS SETTINGS
 ### REQUIRED: Path_to where the main analysis directory resides. Make sure that it exists
-PROJECTDIR="/hpc/dhl_ec/tpeters/git_repos/GWASToolKit/test_output"
+PROJECTDIR="/hpc/dhl_ec/projects/AE_TEMPLATE/SNP"
 
 ### REQUIRED: Name of the project, this will automatically be made.
-PROJECTNAME="test_project"
+PROJECTNAME="PCSK9"
 
 ### REQUIRED: Analysis settings.
 ### You can choose one of these options [GWAS/VARIANT/REGION/GENES].
 ANALYSIS_TYPE="GWAS"
 ### You can choose one of these options if GWAS is chosen [SNPTEST/REGENIE]
-GWAS_TYPE="REGENIE"
+GWAS_TYPE="SNPTEST"
 ### You can choose one of these options [AEGS/AAAGS/CTMM/UCORBIO/MYOMARKER/HELPFULL/RIVM].
 STUDY_TYPE="AEGS"
+
+### REQUIRED: REGENIE Analysis settings. 
+### Only required if GWAS_TYPE="REGENIE"
+REGENIE="${SOFTWARE}/mambaforge3/envs/gwasregenie/bin/regenie"
+REGENIE_CALL_RATE="0.10" # PLINK call rate with the flag --geno
+REGENIE_MAF="0.10" # PLINK MAF with the flag --maf
+REGENIE_HWE="1e-3" # PLINK Hardy-Weinberg Equilibrium (HWE) with the flag --hwe
+REGENIE_PRUNE="100 10 0.2" #Prune the data to only select independent SNPs (with low LD r^2) of one pair each with r^2 = 0.2 with the flags --indep-pairwise
+REGENIE_STEP1_BZISE="1000"
+REGENIE_STEP2_BZISE="1000"
+IMPUTEDDATA_ALLCHR="/hpc/dhl_ec/tpeters/regenie_pgen/OUT/aegscombo_topmed_r3_f10_b38.allChrs"
+
+QMEMGWASREGENIE="16G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE="00:15:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIE1="64G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE1="2:00:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIE2="64G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIE2="8:00:00" # 12 hours for GWAS Regenie
+QMEMGWASREGENIEWRAP="16G" # '8Gb' for GWAS Regenie
+QTIMEGWASREGENIEWRAP="00:15:00" # 12 hours for GWAS Regenie
+
+EXCLUDE_RANGE_FILE="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/exclude_problematic_range_b38.txt"
+
+COVARIATE_QUANTATIVE="Age,PC1,PC2,ORyear"
+COVARIATE_BINARY="SEX"
+# PHENOTYPE_QUANTATIVE="IPH_CLAM_prob,IPH_CLAM_area,IPH_CLAM_prob_rankNorm,IPH_CLAM_area_rankNorm"
+# PHENOTYPE_QUANTATIVE=""
+PHENOTYPE_BINARY="IPH,IPH_CLAM"
+# PHENOTYPE_BINARY="IPH_BIN"
+### END OF REGENIE Analysis settings.
 
 ### REQUIRED
 ### Indicate the file extension used for the genetic data [bgen, gen, gen.gz, vcf, vcf.gz]
@@ -106,8 +138,12 @@ PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
 #
 ### AEGS, TOPMed r3, f10, b38 - vcf.gz files 
 # (note that b38 codes chromosomes as 'chr[#]', for example 'chr1')
+# UNFILTERED DATA
 # IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter.chr"
-IMPUTEDDATA="/hpc/dhl_ec/tpeters/regenie_pgen/converted/aegscombo_topmed_r3_f10_b38.chr"
+# FILTERED DATA - R2 > 0.9, MAF > 0.001
+IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_topmed_r3_f10_b38/aegscombo.topmed_r3_f10_b38.split_norm_af_filter_cleaned.chr"
+# FILTERED REGENIE DATA
+# IMPUTEDDATA="/hpc/dhl_ec/tpeters/regenie_pgen/converted/aegscombo_topmed_r3_f10_b38.chr"
 
 ### AAAGS, 1000G phase 3, GoNL5
 # IMPUTEDDATA="/hpc/dhl_ec/data/_aaa_originals/AAAGS_IMPUTE2_1000Gp3_GoNL5/aaags_1kGp3GoNL5_RAW_chr"
@@ -130,8 +166,7 @@ IMPUTEDDATA="/hpc/dhl_ec/tpeters/regenie_pgen/converted/aegscombo_topmed_r3_f10_
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.females.sample"
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.males.sample"
 # SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.sample"
-# SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
-SAMPLE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/20240905.IPH_Binary.AEGS123.pheno"
+SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
@@ -162,7 +197,6 @@ EXCLUSION="EXCL_DEFAULT"
 # EXCLUSION="EXCL_DIURETICS"
 # EXCLUSION="EXCL_NONDIURETICS"
 
-
 ### REQUIRED: ANALYSIS SPECIFIC ARGUMENTS
 ### For per-variant analysis
 ### EXAMPLE FORMAT
@@ -178,7 +212,14 @@ STANDARDIZE="RAW"
 ### REQUIRED: You can choose one of these method options [expected/score/newml] -- expected is likely best;
 ### refer to SNPTEST documentation and more method options.
 ### If you choose `-method newml`, you must supply the baseline-phenotype to which the other
-### discrete phenotypes are compared.
+### discrete phenotypes are compared. Suitable for categorical phenotypes with more than two categories.
+### For example, if you have three categories: control, mild, and severe; you can choose 'control' as the
+### baseline phenotype; the analysis will then compare mild vs. control and severe vs. control.
+### Note that for binary phenotypes, the baseline-phenotype is not required.
+### Refer to SNPTEST documentation for more information.
+### Note that for both 'expected' and 'newml' a frequentist approach is used, where
+### 1/add=Additive, 2/dom=Dominant, 3/rec=Recessive, 4/rec=General and 5/het=Heterozygote. 
+### The default is hardcoded to 1=Additive.
 METHOD="expected"
 BASELINEPHENOTYPE="control"
 ### REQUIRED: You can indicate to condition on a (list of) variant(s) [NORMAL/CONDITION]; refer to SNPTEST documentation.
@@ -226,35 +267,3 @@ REFERENCEDATA="${GWASTOOLKITDIR}/RESOURCES/1000Gp3v5_EUR/1000Gp3v5.20130502.EUR"
 ### - GENCODE based: gencode_v19_GRCh37_hg19_Feb2009.txt.gz
 ### - PLINK-style gene list: glist-hg19.gz
 HG19_GENES="${GWASTOOLKITDIR}/RESOURCES/glist-hg19.gz"
-
-
-# REGENIE Addition
-REGENIE="${SOFTWARE}/mambaforge3/envs/gwasregenie/bin/regenie"
-
-REGENIE_CALL_RATE="0.10" # PLINK call rate with the flag --geno
-REGENIE_MAF="0.10" # PLINK MAF with the flag --maf
-REGENIE_HWE="1e-3" # PLINK Hardy-Weinberg Equilibrium (HWE) with the flag --hwe
-REGENIE_PRUNE="100 10 0.2" #Prune the data to only select independent SNPs (with low LD r^2) of one pair each with r^2 = 0.2 with the flags --indep-pairwise
-
-REGENIE_STEP1_BZISE="1000"
-REGENIE_STEP2_BZISE="1000"
-
-IMPUTEDDATA_ALLCHR="/hpc/dhl_ec/tpeters/regenie_pgen/OUT/aegscombo_topmed_r3_f10_b38.allChrs"
-
-QMEMGWASREGENIE="16G" # '8Gb' for GWAS Regenie
-QTIMEGWASREGENIE="00:15:00" # 12 hours for GWAS Regenie
-QMEMGWASREGENIE1="64G" # '8Gb' for GWAS Regenie
-QTIMEGWASREGENIE1="2:00:00" # 12 hours for GWAS Regenie
-QMEMGWASREGENIE2="64G" # '8Gb' for GWAS Regenie
-QTIMEGWASREGENIE2="8:00:00" # 12 hours for GWAS Regenie
-QMEMGWASREGENIEWRAP="16G" # '8Gb' for GWAS Regenie
-QTIMEGWASREGENIEWRAP="00:15:00" # 12 hours for GWAS Regenie
-
-EXCLUDE_RANGE_FILE="/hpc/dhl_ec/tpeters/regenie_pgen/exclude_problematic_range_b38.txt"
-
-COVARIATE_QUANTATIVE="Age,PC1,PC2,ORyear"
-COVARIATE_BINARY="SEX"
-# PHENOTYPE_QUANTATIVE="IPH_CLAM_prob,IPH_CLAM_area,IPH_CLAM_prob_rankNorm,IPH_CLAM_area_rankNorm"
-# PHENOTYPE_QUANTATIVE=""
-PHENOTYPE_BINARY="IPH,IPH_CLAM"
-# PHENOTYPE_BINARY=""
