updates to sample-file reference

--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -163,10 +163,10 @@ IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_t
 #
 ### AEGS
 # b37 -- AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11 version
-# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.females.sample"
-# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.males.sample"
-# SAMPLE_FILE="${PROJECTDIR}/20230523.PCSK9.AEGS123.sample"
-SAMPLE_FILE_CHRX="${PROJECTDIR}/20230523.PCSK9.AEGS123.chrX.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.females.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.males.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.sample"
+SAMPLE_FILE_CHRX="${PROJECTDIR}/20240602.PCSK9.AEGS123.sample"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
