--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -75,7 +75,7 @@ MAILSETTINGS="FAIL"
 PROJECTDIR="/hpc/dhl_ec/projects/AE_TEMPLATE/SNP"
 
 ### REQUIRED: Name of the project, this will automatically be made.
-PROJECTNAME="PCSK9"
+PROJECTNAME="PCSK9_GWAS"
 
 ### REQUIRED: Analysis settings.
 ### You can choose one of these options [GWAS/VARIANT/REGION/GENES].
@@ -125,7 +125,7 @@ GENETICEXTENSION="vcf.gz"
 COVARIATE_FILE="${PROJECTDIR}/covariates.txt"
 
 ### REQUIRED: give a list of phenotypes to be analyzed
-PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.txt"
+PHENOTYPE_FILE="${PROJECTDIR}/phenotypes.gwas.txt"
 
 ### SPECIFIC DATA SETTINGS
 ### REQUIRED: location of [imputed] data to use -- all BGEN-format.
@@ -162,11 +162,10 @@ IMPUTEDDATA="/hpc/dhl_ec/data/_ae_originals/AEGS_QC_imputation_2023/aegscombo/_t
 ### REQUIRED: location of sample file.
 #
 ### AEGS
-# b37 -- AEGS_COMBINED_EAGLE2_1000Gp3v5HRCr11 version
-# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.females.sample"
-# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.males.sample"
-# SAMPLE_FILE="${PROJECTDIR}/20240602.PCSK9.AEGS123.sample"
-SAMPLE_FILE_CHRX="${PROJECTDIR}/20240602.PCSK9.AEGS123.sample"
+# SAMPLE_FILE_CHRX="${PROJECTDIR}/20251104.PCSK9.AEGS123.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20251104.PCSK9.AEGS123.females.sample"
+# SAMPLE_FILE="${PROJECTDIR}/20251104.PCSK9.AEGS123.males.sample"
+SAMPLE_FILE="${PROJECTDIR}/20251104.PCSK9.AEGS123.sample"
 
 ### AAAGS
 # SAMPLE_FILE="/hpc/dhl_ec/data/_aaa_originals/pheno_cov_exclusions/aaags_phenocov.sample"
