--- a/gwastoolkit.conf
+++ b/gwastoolkit.conf
@@ -15,7 +15,7 @@ GWASTOOLKITDIR="/hpc/dhl_ec/tpeters/git_repos/GWASToolKit"
 # SNPTEST version 2.5.4
 SNPTEST="${SOFTWARE}/snptest_v2.5.4"
 # SNPTEST version 2.5.6
-SNPTEST="${SOFTWARE}/snptest_v2.5.6"
+# SNPTEST="${SOFTWARE}/snptest_v2.5.6"
 PLINK2="${SOFTWARE}/plink2"
 LOCUSZOOM13="${SOFTWARE}/locuszoom_1.3/bin/locuszoom"
 
